...

                        <EditText
                            android:id="@+id/edit_title"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_description"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                            <TextView
                                android:id="@+id/tv_spinner_price_type"
                                style="@style/AppTheme.EditTextBoarder"
                                android:layout_width="match_parent"
...

                            <TextView
                                android:id="@+id/tv_spinner_offer_type"
                                style="@style/AppTheme.EditTextBoarder"
                                android:layout_width="match_parent"
...

                            <EditText
                                android:id="@+id/edit_price"
                                style="@style/AppTheme.EditText"
                                android:layout_width="match_parent"
...

                        <CheckBox
                            android:id="@+id/checkbox_ono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/tv_available_date"
                                style="@style/AppTheme.EditTextBoarder"
                                android:layout_width="match_parent"
...

                            <TextView
                                android:id="@+id/tv_spinner_animal"
                                style="@style/AppTheme.EditTextBoarder"
                                android:layout_width="match_parent"
...

                            <TextView
                                android:id="@+id/tv_spinner_breed"
                                style="@style/AppTheme.EditTextBoarder"
                                android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_quantity"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                        <FrameLayout
                            android:id="@+id/frameLayout_age_unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_age_unit"
                                style="@style/AppTheme.EditTextBoarder"
                                android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_min_age"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_max_age"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_average_age"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_weight_min"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_weight_max"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/edit_weight_average"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
...

                            <!-- <CheckBox
                                 android:id="@+id/checkbox_detition"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkbox_weighed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkbox_eu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkbox_mouthed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkbox_msa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkbox_lpa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkbox_organic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/checkbox_pcas"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                <com.theherdonline.ui.general.HerdButton
                    android:id="@+id/button_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
