<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/title_tab_home" />

<!--    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_tab_messages"
        android:title="@string/txt_messages" />-->

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_tab_notifications"
        android:title="@string/title_alert" />

    <item
        android:id="@+id/navigation_myad"
        android:icon="@drawable/ic_tab_ad"
        android:title="@string/title_tab_myad" />

    <item
        android:id="@+id/navigation_stream"
        android:icon="@drawable/ic_tab_stream"
        android:title= "@string/title_tab_stream" />

<!--    <item
        android:id="@+id/navigation_stream"
        android:icon="@drawable/ic_stream"
        android:title="@string/title_tab_stream" />-->

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_tab_myherd"
        android:title="@string/title_tab_my_herd" />



</menu>
