...
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/page_margin_left_lager"
                    android:layout_marginRight="@dimen/page_margin_right_lager"
                    android:text="@string/txt_email_address" />

                <EditText
                    android:id="@+id/edit_email"
                    style="@style/AppTheme.EditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/page_margin_left_lager"
                    android:layout_marginRight="@dimen/page_margin_right_lager"
                    android:hint="@string/txt_enter_your_email_address" />
...
                    android:layout_marginLeft="@dimen/page_margin_left_lager"
                    android:layout_marginRight="@dimen/page_margin_right_lager"
                    android:text="@string/txt_password" />


                <EditText
                    android:id="@+id/edit_password"
                    style="@style/AppTheme.EditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/page_margin_left_lager"
                    android:layout_marginRight="@dimen/page_margin_right_lager"
                    android:hint="@string/txt_enter_your_password"
...

                    android:text="@string/txt_remember_me"
                    android:textStyle="normal" />


                <com.theherdonline.ui.general.HerdButton
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/page_margin_button"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="@dimen/page_margin_button"
                    app:HerdButton_icon="@drawable/ic_button_inline_login"
...
