...


    <string name="txt_agent_name">Agent Name: %s</string>
    <string name="txt_agent_company">Agent Company: %s</string>
    <string name="txt_follower">Follow</string>

    <string name="txt_logout">Logout</string>
    <string name="txt_confirm_logout">Are you sure you want to logout?</string>

    <string name="txt_lmk">LMK</string>


    <string name="txt_agents">Agents</string>
...
    <string name="txt_select_offer_type">Select Offer Type</string>

    <string name="txt_something">Something</string>


    <string name="txt_select_location">Select Location</string>
    <string name="txt_publish">Publish</string>
    <string name="txt_goLive">Go Live</string>
    <string name="txt_post">Post</string>
    <string name="txt_cancel_request">Cancel Request</string>

    <string name="txt_add_a_photo">Add a photo</string>
    <string name="txt_change_avatar">Change your avatar</string>
...
        <item>All</item>
        <item>Not Pregnant</item>
        <item>Pregnant</item>
    </string-array>

    <string-array name="array_price_type">
        <item>Per Head</item>
        <item>Per Kilo</item>
    </string-array>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
...
